autism renaming + 1 code smell